Fix cannot focus end time stamp on mobile bug

--- a/client/src/app/normalise.less
+++ b/client/src/app/normalise.less
@@ -70,6 +70,7 @@ input, button {
 
 input {
 	-webkit-appearance: none;
+	letter-spacing: .5px;
 }
 
 html {
